# dioxus-example

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: main.css
src/: button.rs  form.rs  friend.rs  main.rs
