[package]
name = "dioxus-example"
version = "0.1.0"
authors = ["imxonren <mxonren@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.4.5", features = ["serde"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", features = ["web"] }
dioxus-logger = "0.5.1"
serde = { version = "1.0.204", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["js", "v7"] }
